--- a/principal_new.html
+++ b/principal_new.html
@@ -1531,18 +1531,20 @@ async function obtenerSaldo_SOCK() {
 // Función para obtener el saldo del token
 async function obtenerSaldo_POL() {
 
+
+   let balanceEther;
    if (tokenContract.methods) {
        console.log("Con MetaMask obtenerSaldo_POL().");
        // Obtener el saldo en Wei (la unidad más pequeña de Ethereum)
        const balanceWei = await web3.eth.getBalance(globalWalletKey);       
-       const balanceEther = web3.utils.fromWei(balanceWei, 'ether');       
+       balanceEther = web3.utils.fromWei(balanceWei, 'ether');       
        
     
    } else {
         console.log("Con SockWallet obtenerSaldo_POL().");
        // Obtener el saldo de MATIC
         const balanceWei = await provider.getBalance(globalWalletKey);
-        const balanceEther = ethers.utils.formatEther(balanceWei);
+        balanceEther = ethers.utils.formatEther(balanceWei);
    }
 
    const truncatedBalanceEther = parseFloat(balanceEther).toFixed(6);
