--- a/principal_new.html
+++ b/principal_new.html
@@ -163,7 +163,7 @@
     </a>
 
     <!-- Cerrar sesión -->
-    <a href="#" onclick="logout()" style="color: white;">Close
+    <a href="#" onclick="logout()" style="color: white;">
         <span class="glyphicon glyphicon-off"  title="Salir"> </span>
     </a>
     
