--- a/principal_new.html
+++ b/principal_new.html
@@ -1448,6 +1448,7 @@ async function inicializarUI() {
     // Obtener y mostrar saldos
     await obtenerSaldo_POL();
     await obtenerSaldo_SOCK();
+    await getmintedNFT();
    
 
     // Registrar eventos de botones
