--- a/principal_new.html
+++ b/principal_new.html
@@ -867,10 +867,10 @@ span.hashtag {
             <button id="btn-mintear-nft" style="background-color: black; color: white; border: 2px solid lime; border-radius: 20px; height: 40px; display:none;">Mint NFT Username</button>
           
 
-             <div style="display: flex; align-items: center; justify-content: flex-start; gap: 0;"> 
-          <p><h2>POL required is: </h2></p>
-          <p id="mount-minteo"></p>
-        </div>
+          <div style="display: flex; align-items: center; justify-content: flex-start; gap: 0; color: lime;">
+             <h4 style="margin: 0;">POL required is:</h4>
+             <p id="mount-minteo" style="margin: 0;"></p>
+          </div>
 
           </center>
 
