--- a/principal_new.html
+++ b/principal_new.html
@@ -80,7 +80,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
 
 <!-- para usar numeros grandisimos en javascript-->
-<script src="https://unpkg.com/bignumber.js/bignumber.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bignumber.js@9.1.1/bignumber.min.js"></script>
 
 
 
