--- a/principal_new.html
+++ b/principal_new.html
@@ -1901,6 +1901,7 @@ async function getmintedNFT() {
           selectorNFTs.addEventListener('change', () => {
                    getImageNFTUsername("NFT_image-container");
                    info_profile_sock();
+                   get_NFTUsername_profile();
                    //getProfile();
           });
 
