--- a/principal_new.html
+++ b/principal_new.html
@@ -1528,6 +1528,7 @@ async function inicializarUI() {
     await obtenerSaldo_POL();
     await obtenerSaldo_SOCK();
     await getmintedNFT();
+    await get_NFTUsername_profile();
    
 
     // Registrar eventos de botones
