--- a/principal_new.html
+++ b/principal_new.html
@@ -368,7 +368,7 @@ span.hashtag {
                
                 
 
-              <a class="underlineHover" href="#" data-toggle="modal" data-target="#myModalprofile">
+              <a class="underlineHover" onclick="restore_button_update()" href="#" data-toggle="modal" data-target="#myModalprofile">
                 <span class="glyphicon glyphicon-user" style="color: black; font-size: 30px; vertical-align: middle;"></span>
               </a>
 
