--- a/principal_new.html
+++ b/principal_new.html
@@ -1380,7 +1380,7 @@ const Profile_ContractABI =[{"inputs":[{"internalType":"address","name":"nftCont
 
 
 const profileContractAddress = '0x486CbA957Ed26A3AFe31ba00df5Dcc64AF4d3274'; //polygon
-
+let profileContract;
 
 
 
