--- a/principal_new.html
+++ b/principal_new.html
@@ -1051,6 +1051,7 @@ span.hashtag {
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <center><h3><p>Enviar</p></h3></center>
 
+            <center> 
             <div id="loadingAnimation-sendSocks" style="display: none;">
               <div class="spinner"></div>               
             </div>
@@ -1058,6 +1059,7 @@ span.hashtag {
              <div id="loadingAnimation-sendPol" style="display: none;">
               <div class="spinner"></div>               
             </div>
+            </center>
              
              <center><div id="modal-enviar-tokens"></div></center>
 
