--- a/principal_new.html
+++ b/principal_new.html
@@ -1907,7 +1907,7 @@ async function getmintedNFT() {
  selectorNFTs.addEventListener('change', () => {
             getImageNFTUsername("NFT_image-container");
             info_profile_sock();
-            get_NFTUsername_profile();
+            await get_NFTUsername_profile();
  
           });
       
