--- a/principal_new.html
+++ b/principal_new.html
@@ -1904,7 +1904,7 @@ async function getmintedNFT() {
  // Obtener el selector de NFTs
  const selectorNFTs = document.getElementById('selector_NFTs');
  // Agregar evento 'change' al selector
- selectorNFTs.addEventListener('change', () => {
+ selectorNFTs.addEventListener('change', async () => {
             getImageNFTUsername("NFT_image-container");
             info_profile_sock();
             await get_NFTUsername_profile();
