--- a/principal_new.html
+++ b/principal_new.html
@@ -44,6 +44,22 @@
      
     </style>
 
+<style>
+    button {        
+        
+        cursor: pointer;
+        transition: transform 0.2s ease-in-out, background-color 0.4s ease;
+    }
+    button:active {
+        background-color: darkgray;
+        transform: scale(0.85);
+    }
+</style>
+
+
+
+
+
      <style>
 .gallery_toolbar {
   padding: 1rem;
