--- a/principal_new.html
+++ b/principal_new.html
@@ -317,7 +317,7 @@
  
   <ul class="gallery_toolbar" style="background-color: lightgray; border: 2px solid lime; border-radius: 20px;">     
    
-       <a href="#" data-toggle="modal" data-target="#myModal">
+       <a href="#" data-toggle="modal" data-target="#myModal" style=" margin-left: 15px;">
                 <img  id="image-post" src="images/icons/post_icon.SVG" alt="post" width="45">
        </a>
 
