--- a/principal_new.html
+++ b/principal_new.html
@@ -689,11 +689,8 @@ span.hashtag {
     <div class="modal-dialog">
         <!-- Modal content -->
         <div class="modal-content" style="background: linear-gradient(180deg, lime, black);">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                
-            </div>
             <div class="modal-body">
+                <div id="publication-NFT_image-container" style=" width:80px;  height: 80px;"> </div>
                 <div id="publication-post-container"></div>
             </div>
             <div class="modal-footer">
