--- a/principal_new.html
+++ b/principal_new.html
@@ -689,11 +689,13 @@ span.hashtag {
     <div class="modal-dialog">
         <!-- Modal content -->
         <div class="modal-content" style="background: linear-gradient(180deg, lime, black);">
-            <div class="modal-body" style="display: flex; align-items: center; gap: 20px;">
-                <div id="publication-NFT_image-container" style=" width:80px;  height: 80px;"> </div>
-                <div id="publication-post-container"  style="flex: 1; padding: 10px; border-radius: 10px;">></div>
-            </div>
-                 
+            <div class="modal-body" style="display: flex; align-items: flex-start; gap: 20px;">
+                  <div id="publication-NFT_image-container" style="width: 80px; height: 80px; "></div>
+                 <div id="publication-post-container" style="flex: 1; padding: 10px; border-radius: 10px;"></div>
+                  </div>
+            </div>      
+            
+
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
