--- a/principal_new.html
+++ b/principal_new.html
@@ -1587,7 +1587,7 @@ async function inicializarUI() {
     
     await get_NFTUsername_profile();
     
-    await get_publication(1)
+    await get_publication(1);
 
     // Registrar eventos de botones
     document.getElementById("btn-mintear-nft").addEventListener("click", mintearNFT);
