Post get publication

--- a/principal_new.html
+++ b/principal_new.html
@@ -380,8 +380,7 @@ span.hashtag {
          <br>
                    
 
-         <div class="container-fluid" id="publications-container"></div>
-
+         <div id="publications-container"></div>
           
          <div class="user-following-publication-container"  >
          </div> 
