--- a/principal_new.html
+++ b/principal_new.html
@@ -1587,7 +1587,9 @@ async function inicializarUI() {
     await get_NFTUsername_profile();
     
     await get_publication(2);
-
+    await get_publication(3);
+    await get_publication(2);
+    await get_publication(3);
     // Registrar eventos de botones
     document.getElementById("btn-mintear-nft").addEventListener("click", mintearNFT);
     document.getElementById("btn-verify-nft").addEventListener("click", verifymintearNFT);
