--- a/principal_new.html
+++ b/principal_new.html
@@ -1590,6 +1590,7 @@ async function inicializarUI() {
     await get_publication(3);
     await get_publication(2);
     await get_publication(3);
+    await get_publication(4);
     // Registrar eventos de botones
     document.getElementById("btn-mintear-nft").addEventListener("click", mintearNFT);
     document.getElementById("btn-verify-nft").addEventListener("click", verifymintearNFT);
