--- a/principal_new.html
+++ b/principal_new.html
@@ -1591,7 +1591,7 @@ async function inicializarUI() {
     await get_all_publications_home("home-publications-container");
 
     const nftusername = document.getElementById('selector_NFTs').value;
-    await get_NFTUsername_publication("my-publications-container");
+    await get_NFTUsername_publication(nftusername,"my-publications-container");
     
     // Registrar eventos de botones
     document.getElementById("btn-mintear-nft").addEventListener("click", mintearNFT);
