--- a/principal_new.html
+++ b/principal_new.html
@@ -1678,8 +1678,8 @@ async function obtenerGasAjustado() {
         const adjustedGasPrice = gasPrice.mul(110).div(100);
 
         // Mostrar el gasPrice original y ajustado en Gwei
-        console.log("Gas Price:", ethers.utils.formatUnits(gasPrice, 'gwei'), "Gwei");
-        console.log("Gas Price con 10% extra:", ethers.utils.formatUnits(adjustedGasPrice, 'gwei'), "Gwei");
+        console.log("Gas Price:x");
+        console.log("Gas Price con 10% extra:1.1x", );
 
         return adjustedGasPrice; // Devolver el gasPrice ajustado
     } catch (error) {
