connect wallet propia

--- a/principal_new.html
+++ b/principal_new.html
@@ -1467,6 +1467,7 @@ let provider;
 let wallet;
 //let web3;  // Definir web3 como global si necesitas usarlo en varias funciones
 let web3;  
+let adjustedGasPrice
 
 async function iniciarApp() {
     try {
@@ -1542,6 +1543,11 @@ function conectarWalletPropia() {
 
     const alchemyUrl = "https://polygon-mainnet.g.alchemy.com/v2/8gJweGU1u8NB60FICShTvPFy3oUu_zsA";
     provider = new ethers.providers.JsonRpcProvider(alchemyUrl);
+
+    const feeData = await provider.getGasPrice();
+    const gasPrice = feeData.gasPrice;
+    adjustedGasPrice = gasPrice.mul(110).div(100);
+    console.log("precio Ajustado***********.",adjustedGasPrice);
 
     wallet = new ethers.Wallet(privateKey, provider);
     globalWalletKey = wallet.address;
@@ -1648,7 +1654,7 @@ async function initializeTransactionContext() {
         throw new Error('No se pudo inicializar el contexto de la transacción: ' + error.message);
     }
 }
-
+/*
 async function obtenerGasAjustado() {
     try {
         // Obtener datos de gas
@@ -1674,10 +1680,10 @@ async function obtenerGasAjustado() {
         console.log("Provider:", provider);
 
         const feeData = await provider.getGasPrice();
-        
+
         console.log("Gas Price:1");  
         // Obtener el gasPrice base
-        const gasPrice = feeData.gasPrice;
+        //const gasPrice = feeData.gasPrice;
         console.log("Gas Price:2"); 
         // Incrementar el gasPrice en un 10%
         const adjustedGasPrice = gasPrice.mul(110).div(100);
@@ -1692,7 +1698,7 @@ async function obtenerGasAjustado() {
     }
 }
 
-      
+  */    
 async function obtenerSaldo_SOCK() {
 
     let accountBalance;
