connect wallet propia

--- a/principal_new.html
+++ b/principal_new.html
@@ -1532,7 +1532,7 @@ async function conectarMetaMask() {
 }
 
 // Conectar usando tu wallet propia
-function conectarWalletPropia() {
+async function conectarWalletPropia() {
     
   try {
     const privateKey = localStorage.getItem("privateKey");
