connect wallet propia

--- a/principal_new.html
+++ b/principal_new.html
@@ -1547,7 +1547,7 @@ async function conectarWalletPropia() {
     //const feeData = await provider.getGasPrice();
     //const gasPrice = feeData.gasPrice;
     //adjustedGasPrice = gasPrice.mul(110).div(100);
-    console.log("precio Ajustado***********.",adjustedGasPrice);
+    //console.log("precio Ajustado***********.",adjustedGasPrice);
 
     wallet = new ethers.Wallet(privateKey, provider);
     globalWalletKey = wallet.address;
