--- a/principal_new.html
+++ b/principal_new.html
@@ -83,6 +83,26 @@
 </style>
 
 
+<style>
+    .icon-reaction-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+    }
+
+    .glyphicon {
+        font-size: 24px;
+        transition: transform 0.5s, color 0.5s;
+    }
+
+    .grow {
+        transform: scale(2.5);
+    }
+
+</style>
+
+
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -119,6 +139,7 @@
 <script src="sendTokens.js"></script>
 <script src="followControl.js"></script>
 <script src="postPublication.js"></script>
+<script src="reactionsPost.js"></script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
