--- a/principal_new.html
+++ b/principal_new.html
@@ -92,7 +92,7 @@
     }
 
     .glyphicon {
-        font-size: 32px;
+        font-size: 26px;
         transition: transform 0.5s, color 0.5s;
     }
 
@@ -1147,7 +1147,21 @@ span.hashtag {
 
 
 
+<style>
+.spinner {
+  border: 5px solid rgba(0, 0, 0, 0.1);
+  border-left: 5px solid #darkgreen; /* Amarillo */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
 
 
 
