--- a/whiteDocument.html
+++ b/whiteDocument.html
@@ -109,7 +109,7 @@
                     <center> <h1> <font color="white"><p><i>Token Information</i></p></font></h1></center>
                     <br>
 
-                    <center><img src="images/coin_sockpuppets_white.svg" alt="My svg_logo" width="200"  style="transform: rotate(0deg);  margin-left: 10px; "></center>
+                    <center><img src="images/coin_sockpuppets_white.SVG" alt="My svg_logo" width="200"  style="transform: rotate(0deg);  margin-left: 10px; "></center>
                     <br>
                     
                     <br>
