--- a/whiteDocument.html
+++ b/whiteDocument.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Document SOCK PUPPETS TOKEN</title>
+    <title>White Document SOCK TOKEN COIN</title>
 
      <style>
       html {
@@ -78,7 +78,7 @@
           <div class="well" style="border: 2px solid green; background: black; border-radius: 20px;">
 
           <center><font color="white"><h1>
-          <p><i>What is Sock Puppets ? </i></p>
+          <p><i>What is Sock Coin ? </i></p>
           </h1></font></center>
 
 
