--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             font-size: 16px;
         }
         input[type=submit]:hover, button:hover {
-            background-color: lime;
+            background-color: green;
         }
     </style>
 </head>
@@ -123,9 +123,7 @@
              <center>
            <div style=" justify-content: space-between; margin-top: 20px">
 
-               <a class="underlineHover"  style="display: inline-block;">Descargar Apk para Android</p></a>
-                 
-            </div>     </center>   
+              <a class="underlineHover" style="display: inline-block;" href="https://raw.githubusercontent.com/cawdevs/sock/master/files/theSocksApp.apk" download>Descargar Apk para Android</a>     </center>   
 
                 </div>
             </div>
