--- a/principal_new.html
+++ b/principal_new.html
@@ -550,7 +550,11 @@ span.hashtag {
          <br>
                    
          <center><div id="loadingAnimation-principal" style="display: none;">
-                    <div class="spinner"></div>              
+                    <br>
+                    <br>
+                    <div class="spinner"></div> 
+                    <br>
+                    <br>             
          </div>  </center> 
 
 
@@ -1295,7 +1299,7 @@ span.hashtag {
 <style>
 .spinner {
   border: 5px solid rgba(0, 0, 0, 0.1);
-  border-left: 5px solid #FFD700; /* Amarillo */
+  border-left: 10px solid green; /* Amarillo */
   border-radius: 50%;
   width: 75px;
   height: 75px;
@@ -1625,7 +1629,7 @@ async function logout() {
 // Inicializar la interfaz de usuario
 async function inicializarUI() {
     // Mostrar dirección en la interfaz
-    const loadingAnimation = document.getElementById('loadingAnimation-principal');
+    const loadingAnimation = document.getElementById('loadingAnimation-principal'8);
     loadingAnimation.style.display = 'block'; // Muestra la animación al ejecutar la función
            
  
