--- a/principal_new.html
+++ b/principal_new.html
@@ -1299,7 +1299,7 @@ span.hashtag {
 <style>
 .spinner {
   border: 5px solid rgba(0, 0, 0, 0.1);
-  border-left: 10px solid green; /* Amarillo */
+  border-left: 5px solid #FFD700; /* Amarillo */
   border-radius: 50%;
   width: 75px;
   height: 75px;
