--- a/principal_new.html
+++ b/principal_new.html
@@ -1299,7 +1299,7 @@ span.hashtag {
 <style>
 .spinner {
   border: 5px solid rgba(0, 0, 0, 0.1);
-  border-left: 5px solid #FFD700; /* Amarillo */
+  border-left: 5px solid green; /* Amarillo */
   border-radius: 50%;
   width: 75px;
   height: 75px;
@@ -1629,7 +1629,7 @@ async function logout() {
 // Inicializar la interfaz de usuario
 async function inicializarUI() {
     // Mostrar dirección en la interfaz
-    const loadingAnimation = document.getElementById('loadingAnimation-principal'8);
+    const loadingAnimation = document.getElementById('loadingAnimation-principal');
     loadingAnimation.style.display = 'block'; // Muestra la animación al ejecutar la función
            
  
