princial the socks

--- a/principal_new.html
+++ b/principal_new.html
@@ -479,8 +479,10 @@
   <button id="menuBtn" class="menu-button">☰</button>    
 
   
-  <div class="input-group" style="display: flex; align-items: center; gap: 10px;">
-          <div id="NFTUsernames-count"><em>thesocls</em>:</div>
+  <div class="input-group" style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+          
+          <!--<h3><div id="NFTUsernames-count"><em>thesocks</em>:</div></h3>-->
+          <h3><div style=" margin-right: 10px;" ><em> thesocks </em></div></h3>
 
           <input type="text" id="text-address-wallet" class="form-control"
                  placeholder="Search 0x.. or NftUsername"
