princial the socks

--- a/principal_new.html
+++ b/principal_new.html
@@ -482,7 +482,7 @@
   <div class="input-group" style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
           
           <!--<h3><div id="NFTUsernames-count"><em>thesocks</em>:</div></h3>-->
-          <h3><div style=" margin-right: 10px;" ><em> thesocks </em></div></h3>
+          <h2><div style=" margin-right: 10px; margin-left: 10px;" ><<font color="white">em> thesocks </font></em></div></h2>
 
           <input type="text" id="text-address-wallet" class="form-control"
                  placeholder="Search 0x.. or NftUsername"
