--- a/principal_new.html
+++ b/principal_new.html
@@ -1966,6 +1966,8 @@ async function getmintedNFT() {
               const total_nft_Username = document.getElementById('NFTUsernames-count');
               total_nft_Username.style.color = 'lime';
               total_nft_Username.innerHTML =`Total NFTUsernames: ${total_minted_username}`; 
+              
+              console.log("total_nft_Username",total_nft_Username,list_username);
 
                       
               const selector = document.getElementById('selector_NFTs');
