--- a/principal_new.html
+++ b/principal_new.html
@@ -1994,7 +1994,7 @@ async function getmintedNFT() {
         } catch (error) {
               showSuccess('No List NFT username.');
               //alert('Error list NFT');
-//              console.error('Error list NFT:', error);
+              console.error('Error list NFT:', error);
         }
          
 }
