--- a/principal_new.html
+++ b/principal_new.html
@@ -1666,7 +1666,7 @@ async function inicializarUI() {
 
     await getmintedNFT();
     
-    await get_total_liked();
+    get_total_liked();
 
     await get_NFTUsername_profile();
     
@@ -1750,30 +1750,28 @@ async function obtenerGasAjustado() {
     }
 }
 
-async function get_total_liked() {
+function get_total_liked() {
     const nftusername = document.getElementById('selector_NFTs').value;
 
-    try {
-        const response = await fetch("https://api.thesocks.net/total-likes-user/", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({ nft_username_post: nftusername })
-        });
-
-        const data = await response.json();
-
+    fetch("https://api.thesocks.net/total-likes-user/", {
+        method: "POST",
+        headers: {
+            "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ nft_username_post: nftusername })
+    })
+    .then(response => response.json())
+    .then(data => {
         if (data && data.total_likes !== undefined) {
             document.getElementById("total_like_username").textContent = data.total_likes;
         } else {
             document.getElementById("total_like_username").textContent = "0";
         }
-
-    } catch (error) {
+    })
+    .catch(error => {
         console.error("Error al obtener total de likes:", error);
         document.getElementById("total_like_username").textContent = "0";
-    }
+    });
 }
 
 async function obtenerSaldo_SOCK() {
@@ -2032,7 +2030,7 @@ async function getmintedNFT() {
  // Agregar evento 'change' al selector
  selectorNFTs.addEventListener('change', async () => {
             getImageNFTUsername("NFT_image-container");
-            await get_total_liked();
+            get_total_liked();
             info_profile_sock();
 
             await get_NFTUsername_profile();
